Simple Telegram Bot realisation

--- a/AIS Cinema/appsettings.json
+++ b/AIS Cinema/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "AISCinemaDebug": "Server=(localdb)\\MSSQLLocalDB;Database=AISCinema;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=True;"
     //"CinemaISFinal": "Data Source=DESKTOP-HBI6ESF;Database=CinemaIS;User ID=test;Password=root;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "TelegramBot": {
+    "Token": "7248782104:AAHrirW8Xtpg3VrngCwbfIiqeSWLh3d4C2I"
   }
 }
