--- a/AIS Cinema/AIS Cinema.csproj
+++ b/AIS Cinema/AIS Cinema.csproj
@@ -35,4 +35,8 @@
     <Folder Include="wwwroot\posters\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API Models\API Models.csproj" />
+  </ItemGroup>
+
 </Project>
