--- a/AIS Cinema/appsettings.json
+++ b/AIS Cinema/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AISCinemaDebug": "Server=(localdb)\\MSSQLLocalDB;Database=AISCinema;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=True;"
+    "AISCinemaDebug": "Server=(localdb)\\MSSQLLocalDB;Database=AISCinema;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=True;",
+    "AISCinema": "Host=localhost;Database=AIS Cinema;Username=postgres;Password=admin"
     //"CinemaISFinal": "Data Source=DESKTOP-HBI6ESF;Database=CinemaIS;User ID=test;Password=root;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "TelegramBot": {
