--- a/AIS Cinema/AIS Cinema.csproj
+++ b/AIS Cinema/AIS Cinema.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="8.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGenerators.Mvc" Version="8.0.2" />
     <PackageReference Include="MimeKit" Version="4.6.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="QRCoder" Version="1.3.9" />
   </ItemGroup>
 
