--- a/AIS Cinema/appsettings.json
+++ b/AIS Cinema/appsettings.json
@@ -9,9 +9,15 @@
   "ConnectionStrings": {
     "AISCinemaDebug": "Server=(localdb)\\MSSQLLocalDB;Database=AISCinema;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=True;",
     "AISCinema": "Host=localhost;Database=AIS Cinema;Username=postgres;Password=admin"
-    //"CinemaISFinal": "Data Source=DESKTOP-HBI6ESF;Database=CinemaIS;User ID=test;Password=root;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "TelegramBot": {
     "Token": "7248782104:AAHrirW8Xtpg3VrngCwbfIiqeSWLh3d4C2I"
+  },
+  "CompanyInfo": {
+    "Location": "Наш кинотеатр удобно расположен в самом сердце города, на пересечении улиц [название улиц]. Мы рады приветствовать вас в нашем уютном зале, где вы сможете насладиться самыми новыми и популярными фильмами.",
+    "Equipment": "Наш кинотеатр оснащен новейшим оборудованием для показа фильмов, включая современные цифровые проекторы и системы объемного звучания, которые обеспечивают незабываемые впечатления от просмотра.",
+    "Comfort": "Мы заботимся о комфорте наших гостей и предлагаем удобные сидения с широкими проходами, а также специальные места для людей с ограниченными возможностями. Наш кинотеатр также оборудован современными системами кондиционирования и вентиляции.",
+    "Repertoire": "В нашем репертуаре представлены самые разнообразные жанры кино - от захватывающих боевиков и трогательных драм до веселых комедий и увлекательных анимационных фильмов. Каждый найдет что-то по душе!",
+    "Services": "На территории кинотеатра расположены кафе и закусочные, где вы можете приобрести свежий попкорн, напитки и другие вкусные закуски, чтобы сделать ваш просмотр еще приятнее.",
   }
 }
